--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -50,9 +50,9 @@ jobs:
       - name: Run unit test Jasmine karma tests
         run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
 
-      # # 7. Ejecutar pruebas lint
-      # - name: Run lint
-      #   run: npm run lint
+      # 7. Ejecutar pruebas lint
+      - name: Run lint test
+        run: npm run lint
       
       # # 8. Ejecutar pruebas e2e con cypress
       # - name: e2e cypress
