--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -36,24 +36,24 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # 4. Levantar la aplicación de Angular
-      - name: Start Angular App
-        run: npx ionic serve --port 8100 &
-        env:
-          CI: true
+      # # 4. Levantar la aplicación de Angular
+      # - name: Start Angular App
+      #   run: npx ionic serve --port 8100 &
+      #   env:
+      #     CI: true
 
-      # 5. Esperar a que el servidor esté arriba
-      - name: Wait for Angular App to be available
-        run: npx wait-on http://localhost:8100
+      # # 5. Esperar a que el servidor esté arriba
+      # - name: Wait for Angular App to be available
+      #   run: npx wait-on http://localhost:8100
 
-      # 6. Ejecutar pruebas unitarias con Jasmin y Karma
-      - name: Run unit test Jasmine karma tests
-        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+      # # 6. Ejecutar pruebas unitarias con Jasmin y Karma
+      # - name: Run unit test Jasmine karma tests
+      #   run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
 
-      # 7. Ejecutar pruebas lint
-      - name: Run lint test
-        run: npm run lint
+      # # 7. Ejecutar pruebas lint
+      # - name: Run lint test
+      #   run: npm run lint
 
-      # 8. Ejecutar pruebas e2e con cypress
-      - name: e2e cypress
-        run: npx cypress run
+      # # 8. Ejecutar pruebas e2e con cypress
+      # - name: e2e cypress
+      #   run: npx cypress run
