--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
-    "stripe-pwa-elements": "^2.1.0",
     "stripe": "^17.3.1",
+    "stripe-pwa-elements": "^2.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -47,6 +47,7 @@
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
