--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -54,9 +54,9 @@ jobs:
       # - name: Run lint test
       #   run: npm run lint
 
-      # 8. Ejecutar pruebas e2e con cypress
-      - name: e2e cypress
-        run: npx cypress run
+      # # 8. Ejecutar pruebas e2e con cypress
+      # - name: e2e cypress
+      #   run: npx cypress run
 
   # build:
   #     name: Build AAB
