--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -57,10 +57,11 @@ jobs:
       # # 8. Ejecutar pruebas e2e con cypress
       # - name: e2e cypress
       #   run: npx cypress run
+
   build:
     name: Build AAB
     runs-on: ubuntu-latest
-    needs: tests # Solo ejecutarse si el job de tests fue exitoso
+    needs: Pruebas # Solo ejecutarse si el job de tests fue exitoso
     steps:
       # 1. Checkout del código
       - name: Checkout code
