--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'adoptopenjdk'
+          distribution: 'adoptium'
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
