--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -83,8 +83,10 @@ jobs:
 
       # 3. Construir el artefacto AAB
       - name: Give gradlew execute permissions
-        run: chmod +x ./gradlew
-        
+        run: |
+          cd android
+          chmod +x gradlew
+
       - name: Build AAB
         run: |
           cd android
