--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -97,7 +97,7 @@ jobs:
           ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
           ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
 
-      # 4. Subir el artefacto generado
+      # 4. Subir el artefacto generadooo
       - name: Upload AAB
         uses: actions/upload-artifact@v3
         with:
