--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -59,36 +59,21 @@ jobs:
       #   run: npx cypress run
 
   build:
+    name: Build app
     runs-on: ubuntu-latest
     needs: Pruebas # Este job se ejecutará solo si 'Pruebas' pasa exitosamente
     steps:
-            # 1. Checkout del repositorio
-            - name: Checkout code
-              uses: actions/checkout@v3
+      # 1. Checkout del repositorio
+      - name: Checkout code
+        uses: actions/checkout@v3 
 
-            # 2. Configurar Node.js
-            - name: Set up Node.js
-              uses: actions/setup-node@v3
-              with:
-                node-version: "20" # Versión de Node.js recomendada
-                cache: "npm"
-
-            # 3. Instalar dependencias del proyecto
-            - name: Install dependencies
-              run: npm ci
-
-            # 4. Instalar Ionic CLI globalmente
-            - name: Install Ionic CLI
-              run: npm install -g @ionic/cli
-
-            # 5. Construir la aplicación con Ionic
-            - name: Build Ionic App
-              run: ionic build
-
-            # 6. Sincronizar Capacitor
-            - name: Synchronize Capacitor
-              run: npx cap sync android
-
-            # 7. Verificar carpeta de Android
-            - name: Check Android Folder
-              run: ls android/
+      # 2. Configurar Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+          cache: 'npm'
+      
+      # 3. Instalar dependencias
+      - name: Install dependencies
+        run: npm ci
