--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -62,6 +62,7 @@ jobs:
     name: Build app
     runs-on: ubuntu-latest
     needs: Pruebas # Este job se ejecutará solo si 'Pruebas' pasa exitosamente
+    if: github.ref == 'refs/heads/master'
     steps:
       # 1. Checkout del repositorio
       - name: Checkout code
