--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -75,22 +75,27 @@ jobs:
           node-version: '20'
           cache: 'npm'
       
-      # 3. Instalar dependencias
+      # 3. Eliminar node_modules y package-lock.json
+      - name: Clean node_modules and package-lock.json
+       run: |
+        rm -rf node_modules package-lock.json
+
+      # 4. Instalar dependencias
       - name: Install dependencies
-        run: npm ci
-      
-      # 4. Instalar Ionic CLI globalmente
+       run: npm install
+
+      # 5. Instalar Ionic CLI globalmente
       - name: Install Ionic CLI
-        run: npm install -g @ionic/cli
+       run: npm install -g @ionic/cli
 
-      # 5. Construir la aplicación con Ionic
+      # 6. Construir la aplicación con Ionic
       - name: Build Ionic App
-        run: ionic build
+       run: ionic build
 
-      # 6. Copiar archivos al proyecto Android
+      # 7. Copiar archivos al proyecto Android
       - name: Copy to Android
-        run: ionic cap copy
+       run: ionic cap copy
 
-      # 7. Sincronizar archivos con Capacitor
+      # 8. Sincronizar archivos con Capacitor
       - name: Sync with Capacitor
-        run: ionic cap sync
+       run: ionic cap sync
