--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -54,9 +54,9 @@ jobs:
       # - name: Run lint test
       #   run: npm run lint
 
-      # # 8. Ejecutar pruebas e2e con cypress
-      # - name: e2e cypress
-      #   run: npx cypress run
+      # 8. Ejecutar pruebas e2e con cypress
+      - name: e2e cypress
+        run: npx cypress run
 
   build:
     name: Build app
@@ -134,20 +134,4 @@ jobs:
           name: app-release.aab
           path: android/app/build/outputs/bundle/release/app-release.aab
 
-      #PRUEBA FINAL
-      # # 9. Configurar el entorno para Android SDK
-      # - name: Set up Android SDK
-      #   uses: android-actions/setup-android@v2
-      #   with:
-      #     api-level: 33
-      #     target: android-33
-      #     build-tools: 33.0.2
-
-      # # 10. Aceptar las licencias de Android SDK
-      # - name: Accept Android Licenses
-      #   run: yes | sdkmanager --licenses
-
-      # # 11. Construir el archivo .aab
-      # - name: Build Android App Bundle (.aab)
-      #   run: ./gradlew bundleRelease
-      #   working-directory: android
+   
