--- a/.github/workflows/pruebas.yml
+++ b/.github/workflows/pruebas.yml
@@ -42,9 +42,9 @@ jobs:
         env:
           CI: true
 
-      # 5. Esperar a que el servidor esté arriba
-      - name: Wait for Angular App to be available
-        run: npx wait-on http://localhost:8100
+      # # 5. Esperar a que el servidor esté arriba
+      # - name: Wait for Angular App to be available
+      #   run: npx wait-on http://localhost:8100
 
       # # 6. Ejecutar pruebas unitarias con Jasmin y Karma
       # - name: Run unit test Jasmine karma tests
@@ -55,8 +55,8 @@ jobs:
       #   run: npm run lint
 
       # 8. Ejecutar pruebas e2e con cypress
-      - name: e2e cypress
-        run: npx cypress run
+      # - name: e2e cypress
+      #   run: npx cypress run
 
   build:
     name: Build app
